# particulo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
example/: CMakeLists.txt
example/bouncing_balls/: CMakeLists.txt
example/bouncing_balls/src/: main.cpp
example/interactive_rigidbody/: CMakeLists.txt
example/interactive_rigidbody/src/: main.cpp
example/interactive_solar_system/: CMakeLists.txt
example/interactive_solar_system/src/: main.cpp
example/solar_system/: CMakeLists.txt
example/solar_system/src/: main.cpp
example/src/: main.cpp
example/verlet/: CMakeLists.txt
example/verlet/src/: main.cpp
lib/glad/: CMakeLists.txt  glad.c
lib/glad/include/glad/: glad.h
src/particulo/: circle.frag  circle.vert  particulo.hpp  shader.hpp  v2d.hpp
