cmake_minimum_required(VERSION 3.16.3)
project(verlet)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(SOURCE_FILES src/main.cpp)

add_executable(verlet ${SOURCE_FILES})
if (MSVC)
target_link_options(verlet PRIVATE "-static-libgcc" "-static-libstdc++")
endif()
if (MINGW)
target_link_options(verlet PRIVATE "-static")
endif()
target_link_libraries(verlet glfw ${GLFW_LIBRARIES})
target_link_libraries(verlet glad)
target_link_libraries(verlet glm)